  tapes (Tapes button hidden after purchase/sale made) (thanks Dan Alleck).

--Wire cutters can now disable an electric floor that is off.

--Made backpack quantities unlimited (instead of one item per slot).

--Improved behavior of undo button for tool sales (undone sales are put back
  where they were sold from, vault or backpack, when possible instead of always
  being put back in the vault).




Version 8   2013-June-3

--Added button for clearing a user's list of ignored houses (in case user
  ignores one by mistake).

--Added pencil-scratch marking on blueprints for tiles that have been damaged.

--Added server option for running in perma-permadeath mode (hard limit on
  number of lives per player).




Version 7 Live Server Fixes

--Added extra column in admin view showing edit count for a house (to monitor
  how many top houses have not been edited again since being robbed).

--Increased salary for un-broken houses by a factor of 10.




Version 7    2013-May-29

--Fixed crash in edit-screen suicide when family members have no paths to exit
  (thanks Seth Archambault).

--Fixed visual glitch in blueprints (some pixels in bottom row not being
  shadowed properly).

--Fixed bug in movement acceleration, which is meant only for panning
  (in blueprints and when paused during playback), affecting robber movement.

--Improved legibility of blueprints by adding inner shading to walls, pits,
  and trapdoors.

--Improved legibility of doors on blueprints by adding knobs.

--Panning around a blueprint during robbery now counts as activity, preventing
  the robbery checkout from becoming stale (thanks Seth Archambault).

--Fixed so that wife runs to a killed child even if she hasn't see the robber
  yet.

--Mouse-over in blueprints now shows tool tips for damaged objects 
  (thanks Zed).

--Uninteresting houses in the list can now be ignored (Ignore House button) until they change (thanks Zed).




Version 6   2013-May-24
